WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245253
Prepare generated serialization code for enums that are not OptionSets
https://bugs.webkit.org/show_bug.cgi?id=245253
Summary
Prepare generated serialization code for enums that are not OptionSets
Alex Christensen
Reported
2022-09-15 16:08:30 PDT
Gavin did some of this work initially.
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2022-09-15 16:10:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4406
EWS
Comment 2
2022-09-16 08:23:21 PDT
Committed
254557@main
(65202ecd5d0c): <
https://commits.webkit.org/254557@main
> Reviewed commits have been landed. Closing PR #4406 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-09-16 08:24:19 PDT
<
rdar://problem/100028018
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug