Prepare generated serialization code for enums that are not OptionSets https://bugs.webkit.org/show_bug.cgi?id=245253

Reviewed by Chris Dumez.

Gavin did some of this work initially, but EnumTraits wasn't quite ready.

* Source/WTF/wtf/EnumTraits.h:
(WTF::isValidEnum):
* Source/WebCore/dom/ViewportArguments.h:
* Source/WebCore/page/ShareData.h:
* Source/WebCore/platform/ContextMenuItem.cpp:
(WebCore::isValidContextMenuAction):
(WTF::void>):
* Source/WebCore/platform/ContextMenuItem.h:
(WTF::EnumTraits<WebCore::ContextMenuAction>::isValidEnum): Deleted.
* Source/WebKit/Scripts/generate-serializers.py:
(SerializedEnum.additional_template_parameter):
(generate_header):
(generate_cpp):
* Source/WebKit/Scripts/webkit/messages.py:
(generate_message_names_header):
(generate_message_names_implementation):
* Source/WebKit/Scripts/webkit/tests/GeneratedSerializers.cpp:
(WTF::void>):
(WTF::isValidEnum<EnumNamespace::EnumType>): Deleted.
* Source/WebKit/Scripts/webkit/tests/GeneratedSerializers.h:
* Source/WebKit/Scripts/webkit/tests/MessageNames.cpp:
(WTF::void>):
(IPC::isValidMessageName): Deleted.
* Source/WebKit/Scripts/webkit/tests/MessageNames.h:
(WTF::EnumTraits<IPC::MessageName>::isValidEnum): Deleted.
* Source/WebKit/Shared/WebCoreArgumentCoders.cpp:
(IPC::ArgumentCoder<FileChooserSettings>::decode):
(IPC::ArgumentCoder<ViewportAttributes>::encode): Deleted.
(IPC::ArgumentCoder<ViewportAttributes>::decode): Deleted.
(IPC::ArgumentCoder<RawFile>::encode): Deleted.
(IPC::ArgumentCoder<RawFile>::decode): Deleted.
(IPC::ArgumentCoder<ShareData>::encode): Deleted.
(IPC::ArgumentCoder<ShareData>::decode): Deleted.
(IPC::ArgumentCoder<ShareDataWithParsedURL>::encode): Deleted.
(IPC::ArgumentCoder<ShareDataWithParsedURL>::decode): Deleted.
* Source/WebKit/Shared/WebCoreArgumentCoders.h:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Tools/TestWebKitAPI/Tests/WTF/EnumTraits.cpp:

Canonical link: https://commits.webkit.org/254557@main