Source/WTF/wtf/EnumTraits.h
@@ -51,22 +51,14 @@ struct EnumValueChecker<T, EnumValues<E>> {
     }
 };
 
-template<typename E, typename T, typename = std::enable_if_t<!std::is_same_v<std::underlying_type_t<E>, bool>>>
-constexpr auto isValidEnum(T t) -> decltype(EnumValueChecker<T, typename EnumTraits<E>::values>::isValidEnum(t), bool())
+template<typename E, typename = std::enable_if_t<!std::is_same_v<std::underlying_type_t<E>, bool>>>
+bool isValidEnum(std::underlying_type_t<E> t)
 {
-    static_assert(sizeof(T) >= sizeof(std::underlying_type_t<E>), "Integral type must be at least the size of the underlying enum type");
-
-    return EnumValueChecker<T, typename EnumTraits<E>::values>::isValidEnum(t);
+    return EnumValueChecker<std::underlying_type_t<E>, typename EnumTraits<E>::values>::isValidEnum(t);
 }
 
-template<typename E, typename T, typename = std::enable_if_t<!std::is_same_v<std::underlying_type_t<E>, bool>>>
-auto isValidEnum(T t) -> decltype(EnumTraits<E>::isValidEnum(t), bool())
-{
-    return EnumTraits<E>::isValidEnum(t);
-}
-
-template<typename E, typename T, typename = std::enable_if_t<std::is_same_v<std::underlying_type_t<E>, bool>>>
-constexpr bool isValidEnum(T t)
+template<typename E, typename = std::enable_if_t<std::is_same_v<std::underlying_type_t<E>, bool>>>
+constexpr bool isValidEnum(bool t)
 {
     return !t || t == 1;
 }
